# Agenbot_L

./: README.md
dev_L/: PROGRESS.md  README.md
dev_L/agent/: agent.py  cli.py  tools.py
dev_L/esp32_master/: CMakeLists.txt  README.md
dev_L/esp32_master/main/: CMakeLists.txt  agent_loop.c  agent_loop.h  llm_client.h  main.c  secrets.h  secrets.h.example  telegram_bot.h  tool_arm.c  tool_arm.h  uart_bridge.c  uart_bridge.h  wifi_manager.c  wifi_manager.h
dev_L/vision/: VISION_MODULE_DOC.md  calibrate.py  calibration.py  camera.py  detector.py  requirements.txt  vision_server.py
dev_L_use/esp32_eye/: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
dev_L_use/esp32_eye/doc/: TECHNICAL.md
dev_L_use/esp32_eye/main/: CMakeLists.txt  app_main.c  camera_init.c  camera_init.h  http_server.c  http_server.h  idf_component.yml  nvs_config.c  nvs_config.h  wifi_provision.c  wifi_provision.h  wifi_sta.c  wifi_sta.h
